# lambda-finder

./: README.md  package-lock.json  package.json
bundle/deb/: Lambda Finder_1.0.0_amd64.deb
bundle/release/: Lambda Finder_1.0.0_amd64.AppImage.sig  latest.json
scripts/: generate-updater-key.sh  publish-update.sh  rebuild-and-run.sh  rebuild.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lambda_finder.rs  lib.rs  main.rs  pull_branch.rs
