[package]
name = "lambda-finder"
version = "1.0.0"
description = "Desktop app to pull repo branches and open AWS Lambda / CloudWatch Logs URLs in the browser"
authors = ["bhauiprogrammer <bhauiprogrammer@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lambda_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "sync"] }
regex = "1"
once_cell = "1"
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
